# Cosmo

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  appveyor.yml  main.c  newtest.cosmo  test.cosmo  test.py
.github/workflows/: check_build.yaml
docs/: control.md  intro.md  objects.md  operators.md  stdlib.md  types.md
examples/: break.cosmo  compare.cosmo  fibtest.cosmo  fibtest.lua  fortest.lua  getters_setters.cosmo  increment.cosmo  iterator.cosmo  newtest.cosmo  reader.cosmo  stress.cosmo  strings.cosmo  test.cosmo  test.lua  testsuite.cosmo  tostring.cosmo  variadic.cosmo  writer.cosmo
src/: _time.h  cbaselib.c  cbaselib.h  cchunk.c  cchunk.h  cdebug.c  cdebug.h  cdump.c  cdump.h  clex.c  clex.h  cmem.c  cmem.h  cobj.c  cobj.h  coperators.c  coperators.h  cosmo.h  cparse.c  cparse.h  cstate.c  cstate.h  ctable.c  ctable.h  cundump.c  cundump.h  cvalue.c  cvalue.h  cvm.c  cvm.h  main.c
util/: linenoise-win32.c  linenoise.c  linenoise.h
